*SE AGREGARON LOS CAMPOS REQUERIDOS AL MODELO *SE MODIFICO EL FRONT-END PARA UNA MEJOR VISUALIZACIÓN
Signed-off-by: carlossegovia <karlucho_94_s@hotmail.com>

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
         </div>
     </nav>
 
-    <section class="container">
+    <section class="container-fluid">
         <div class="row">
             <section class="col-md-7" id="lista-persona"></section>
             <section class="col-md-5" id="formulario-persona"></section>
