Se agrego editar y se solucionaron bugs varios

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="#personas/">Personas</a></li>
+                    <li><a href="#agregar/">Agregar</a></li>
                 </ul>
             </div>
         </div>
@@ -39,6 +40,7 @@
         <div class="row">
             <section class="col-md-7" id="lista-persona"></section>
             <section class="col-md-5" id="formulario-persona"></section>
+            <section class="col-md-5" id="formulario-editar-persona"></section>
         </div>
     </section>
 
