-se completo paginacion

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#personas/">Personas</a></li>
+                    <li><a href="#">Personas</a></li>
                     <li><a href="#agregar/">Agregar</a></li>
                 </ul>
             </div>
