--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <title>ProgWeb Frontend - BackboneJS</title>
     <!-- The main CSS file -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet" />
     <!-- JavaScript Libs Includes -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -19,6 +20,10 @@
     <script src="js/view/formulario-persona-view.js"></script>
     <!-- JavaScript App Includes -->
     <script src="js/router.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -30,7 +35,8 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="#">Personas</a></li>
-                    <li><a href="#agregar/">Agregar</a></li>
+                    <li><a href="#" data-toggle="modal" data-target="#myModal">Agregar</a></li>
+                    <!-- Trigger the modal with a button -->
                 </ul>
             </div>
         </div>
@@ -38,9 +44,49 @@
 
     <section class="container-fluid">
         <div class="row">
-            <section class="col-md-7" id="lista-persona"></section>
-            <section class="col-md-5" id="formulario-persona"></section>
-            <section class="col-md-5" id="formulario-editar-persona"></section>
+            <section class="col-md-10" id="lista-persona"></section>
+
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" role="dialog">
+                <div class="modal-dialog modal-lg">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h6 class="modal-title"></h6>
+                        </div>
+                        <div class="modal-body">
+                            <section id="formulario-persona"></section>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Modal -->
+            <div class="modal fade" id="myModal2" role="dialog">
+                <div class="modal-dialog modal-lg">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h6 class="modal-title"></h6>
+                        </div>
+                        <div class="modal-body">
+                            <section id="formulario-editar-persona"></section>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
     </section>
 
