-Se creo la rama para el pages

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//rawgit.com/jashkenas/underscore/master/underscore-min.js"></script>
     <script src="//rawgit.com/jashkenas/backbone/master/backbone-min.js"></script>
     <!--Model y collections -->
-    <script src="js/model/persona-model.js"></script>
-    <script src="js/collection/persona-collection.js"></script>
+    <script src="app/js/model/persona-model.js"></script>
+    <script src="app/js/collection/persona-collection.js"></script>
     <!--Views -->
-    <script src="js/view/lista-persona-view.js"></script>
-    <script src="js/view/formulario-persona-view.js"></script>
+    <script src="app/js/view/lista-persona-view.js"></script>
+    <script src="app/js/view/formulario-persona-view.js"></script>
     <!-- JavaScript App Includes -->
-    <script src="js/router.js"></script>
+    <script src="app/js/router.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
