--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The main CSS file -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="app/css/style.css" rel="stylesheet" />
     <!-- JavaScript Libs Includes -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//rawgit.com/jashkenas/underscore/master/underscore-min.js"></script>
