--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <!-- The main CSS file -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="app/css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <!-- JavaScript Libs Includes -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//rawgit.com/jashkenas/underscore/master/underscore-min.js"></script>
     <script src="//rawgit.com/jashkenas/backbone/master/backbone-min.js"></script>
     <!--Model y collections -->
-    <script src="app/js/model/persona-model.js"></script>
-    <script src="app/js/collection/persona-collection.js"></script>
+    <script src="js/model/persona-model.js"></script>
+    <script src="js/collection/persona-collection.js"></script>
     <!--Views -->
-    <script src="app/js/view/lista-persona-view.js"></script>
-    <script src="app/js/view/formulario-persona-view.js"></script>
+    <script src="js/view/lista-persona-view.js"></script>
+    <script src="js/view/formulario-persona-view.js"></script>
     <!-- JavaScript App Includes -->
-    <script src="app/js/router.js"></script>
+    <script src="js/router.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
